--- a/FirstProject/01-fundamentals-reactjs/src/components/Sidebar.module.css
+++ b/FirstProject/01-fundamentals-reactjs/src/components/Sidebar.module.css
@@ -21,7 +21,37 @@
     flex-direction: column;
     align-items: center;
 
+    margin-top: -2rem;
 }
+
+.avatar {
+    box-sizing: initial;
+    /*
+                            sempre que utiliza borda, padding , margin outline... 
+                            sempre ocupe um espaço a mais e não exprema o elemento 
+                            para que aquilo caiba também dentro do container
+                            */
+    width: 3rem;
+    height: 3rem;
+    border-radius: 8px;
+    border: 4px solid var(--gray-800);
+    outline: 2px solid var(--green-500);
+
+}
+
+.profile strong {
+    margin-top: 1rem;
+    color: var(--gray-100);
+    line-height: 1.6;
+}
+
+.profile span{
+    font-size: 0.875rem;
+    color: var(--gray-400);
+    line-height: 1.6;
+}
+
+
 
 .sidebar footer {
     border-top: 1px solid var(--gray-600);
@@ -29,6 +59,7 @@
     padding: 1.5rem 2rem 2rem;
 
 }
+
 .sidebar footer a {
     background: transparent;
     color: var(--green-500);
@@ -39,9 +70,17 @@
     font-weight: bold;
     display: block;
     text-decoration: none;
-    
+
     display: flex;
     align-items: center;
     justify-content: center;
 
+    gap: 0.5rem;
+
+    transition: color 0.2s, background-color 0.2s;
+}
+
+.sidebar footer a:hover{
+    background: var(--green-500);
+    color: var(--white);
 }
